tests/hm_typing/empty_function.sy
f :: fn a, b -> int do end

// error: $Mismatch { .. }

